Different bevel shading with Auto Smooth GN modifier, depending on angle value #119520

Closed
opened 2024-03-15 15:24:09 +01:00 by nameless · 3 comments

System Information
Operating system: Windows-10 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.76

Blender Version
Broken: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-14 17:18, hash: 335ff6efab67
Worked: 4

Short description of error
Different shading due to smoothing - not sure what are specifics causing it, nor if it's 4.0 or 4.1 being incorrect. In the following screenshots, top is blender 4.1, bottom is 4.0

image
image

Exact steps for others to reproduce the error

  1. open simplified.blend in 4.0 - bevels are smooth
  2. open simplified.blend in 4.1 - some bevel edges are smooth, some are sharp.

To fix it, it seems I just have to increase angle in Auto Smooth modifier from 30 to around 51. It makes 4.1 and 4.0 visually similar, if not the same, but I'd suggest dev double checking it and whether 51 angle is correct/expected value for this specific mesh (especially for bevels in that are in marked 90 corner area: image

**System Information** Operating system: Windows-10 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.76 **Blender Version** Broken: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-14 17:18, hash: `335ff6efab67` Worked: 4 **Short description of error** Different shading due to smoothing - not sure what are specifics causing it, nor if it's 4.0 or 4.1 being incorrect. In the following screenshots, top is blender 4.1, bottom is 4.0 ![image](/attachments/5eca52ab-136c-45d8-9985-c257f9ce944e) ![image](/attachments/1bdd0375-4987-4a7a-8393-4c0ffeeed8de) **Exact steps for others to reproduce the error** 1. open simplified.blend in 4.0 - bevels are smooth 2. open simplified.blend in 4.1 - some bevel edges are smooth, some are sharp. To fix it, it seems I just have to increase angle in Auto Smooth modifier from 30 to around 51. It makes 4.1 and 4.0 visually similar, if not the same, but I'd suggest dev double checking it and whether 51 angle is correct/expected value for this specific mesh (especially for bevels in that are in marked 90 corner area: ![image](/attachments/2b71da26-f336-4af5-8f28-26bdac0c9e03)
nameless added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-15 15:24:10 +01:00

This looks like just different way to propagate value between domains..

This looks like just different way to propagate value between domains..
Iliya Katushenock added the
Interest
Geometry Nodes
Interest
Nodes & Physics
labels 2024-03-15 15:42:25 +01:00
Author

I forgot to add detail, but seems to be important to keep in mind - in bevel modifier settings, Profile -> Shape, it's set to 0.66 instead default 0.50 (which probably makes bigger difference in angles between bevel edges)

EDIT: Again to clarify - 0.66 is a value I set manually in 4.0, not something that blender did on own - sorry if it was confusing

I forgot to add detail, but seems to be important to keep in mind - in bevel modifier settings, Profile -> Shape, it's set to 0.66 instead default 0.50 (which probably makes bigger difference in angles between bevel edges) EDIT: Again to clarify - 0.66 is a value I set manually in 4.0, not something that blender did on own - sorry if it was confusing
Member

Hi, I think placing auto smooth modifier at the top in modifier stack also fixes the issue (workaround). Actual fix might be different.
@HooglyBoogly

Hi, I think placing `auto smooth` modifier at the top in modifier stack also fixes the issue (workaround). Actual fix might be different. @HooglyBoogly
Pratik Borhade added
Module
Modeling
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2024-03-18 10:44:43 +01:00
Hans Goudey added this to the 4.1 milestone 2024-03-18 20:45:08 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-03-18 20:46:10 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-18 21:43:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119520
No description provided.